--- a/modules/ROOT/pages/deployment/webui/webui-customisation.adoc
+++ b/modules/ROOT/pages/deployment/webui/webui-customisation.adoc
@@ -28,24 +28,24 @@ Web can be consumed by another application in a stripped-down version called “
 
 The administrator of the environment is capable of providing custom web applications to the users. This feature is useful for organizations that want to provide third party or custom apps to their users.
 
-It's important to note, that the feature is at the moment only capable providing static (js, mjs, e.g.) web applications and does not support injection of dynamic web applications (custom dynamic backends).
+It's important to note, that the feature is at the moment only capable of providing static (js, mjs, e.g.) web applications and does not support injection of dynamic web applications (custom dynamic backends).
 
 === Loading Applications
 
 Web applications are loaded, if added in the Infinite Scale source code, at build-time from `<ocis_repo>/services/web/assets/apps`. This cannot be manipulated at runtime.
 
-Additionally, the administrator can provide custom applications by storing them in the path defined the environment variable `WEB_ASSET_APPS_PATH`.
+Additionally, the administrator can provide custom applications by storing them in the path defined by the environment variable `WEB_ASSET_APPS_PATH`.
 
 This environment variable defaults to the Infinite Scale xref:deployment/general/general-info.adoc#base-data-directory[base data directory] `$OCIS_BASE_DATA_PATH/web/assets/apps`, but can be redefined with any path set manually.
 
-The final list of available applications is composed of the build in and the custom applications provided by the administrator via `WEB_ASSET_APPS_PATH`.
+The final list of available applications is composed of the built-in and the custom applications provided by the administrator via `WEB_ASSET_APPS_PATH`.
 
-For example, if Infinite Scale would contain a build in extension named `image-viewer-dfx` and the administrator provides a custom application named `image-viewer-obj` via the `WEB_ASSET_APPS_PATH` directory, the user will be able to access both
+For example, if Infinite Scale would contain a built-in extension named `image-viewer-dfx` and the administrator provides a custom application named `image-viewer-obj` via the `WEB_ASSET_APPS_PATH` directory, the user will be able to access both
 applications from the WebUI.
 
 === Application Structure
 
-* Applications always have to follow a strict structure, which are:
+* Applications always have to follow a strict structure, which is:
 
 ** Each application must be in its own directory accessed via `WEB_ASSET_APPS_PATH`.
 ** Each application directory must contain a `manifest.json` file.
@@ -74,7 +74,7 @@ The `apps.yaml` file must contain a list of key-value pairs which gets merged wi
 {
   "entrypoint": "index.js",
   "config": {
-    "maxWith": 1280,
+    "maxWidth": 1280,
     "maxHeight": 1280
   }
 }
@@ -100,7 +100,7 @@ The final configuration for web will be:
       "id": "image-viewer-obj",
       "path": "index.js",
       "config": {
-        "maxWith": 1280,
+        "maxWidth": 1280,
         "maxHeight": 640,
         "maxSize": 512
       }
@@ -133,4 +133,4 @@ This also applies for the `manifest.json` file, if the administrator wants to pr
 
 == Miscellaneous
 
-Please note that Infinite Scale, respectively the web service needs a restart to load new applications or changes to the `apps.yaml` file.
+Please note that Infinite Scale, in particular the web service, needs a restart to load new applications or changes to the `apps.yaml` file.
